@@ -5,15 +5,15 @@ import java.util.*;
 /**
  * *********************ok
  * 打印二叉树中和为某一值的路径
- * 10
- * 5 12
- * 4    7
+ *   10
+ *  5  12
+ * 14    7
  *
- * 153
+ * 153 shipin
  */
 public class Tree1 {
     private List<List<Integer>> result = new ArrayList<>();
-    private LinkedList<Integer> list = new LinkedList<>();
+    private List<Integer> list = new ArrayList<>();
 
     public static void main(String[] args) {
         TreeNode root = new TreeNode(10);
@@ -22,7 +22,7 @@ public class Tree1 {
         root.left = level2_1;
         root.right = level2_2;
 
-        TreeNode level3_1 = new TreeNode(4);
+        TreeNode level3_1 = new TreeNode(14);
         TreeNode level3_2 = new TreeNode(7);
         level2_1.left = level3_1;
         level2_2.right = level3_2;
@@ -30,7 +30,7 @@ public class Tree1 {
         Tree1 tree1 = new Tree1();
         Map<Integer, List<Integer>> resultMap = new LinkedHashMap<>();
         List<List<Integer>> resultList = new ArrayList<>();
-        tree1.dfs(root, 19);
+        tree1.dfs(root, 29);
         System.out.println(tree1.result);
     }
 
@@ -45,6 +45,7 @@ public class Tree1 {
         //如果target为0，且左右子树都为空，说明找到了一条路径
         if (target == 0 && root.left == null && root.right == null) {
             result.add(new LinkedList<>(list));
+            //return;
         }
 
         //左子树作为根节点，继续寻找
@@ -52,7 +53,9 @@ public class Tree1 {
         // 如果root.left为空，这个函数就会直接返回，不会执行下面的语句，也是递归的终止条件
         dfs(root.right, target);
         //回溯到上一层，删除当前层的元素
-        list.removeLast();
+        System.out.println(root.val + "-------------");
+        //list.removeLast();
+        list.remove(list.size()-1);
     }
 
     //public void dfs(TreeNode node, int level, Map<Integer, List<Integer>> map, Stack<Integer> stack, int sum) {
